AwassamDialog FireBase and connect with api

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -43,10 +43,13 @@
   "do_You_have_any_Special_Instructions": "هل لديك أي تعليمات خاصة؟",
   "choosetypeofcareService": "اختر نوع خدمة الرعاية",
   "enterspecialinstructionshere": "أدخل تعليمات خاصة هنا ...",
-  "please_submit_the_Following_details": "يرجى تقديم التفاصيل التالية",
+  "please_submit_the_Following_details": "يرجى مراجعة التفاصيل التالية",
   "name": "الاسم",
+  "enteryourname": "أدخل أسمك",
   "email": "البريد الاكتروني",
+  "enteryouremai": "أدخل بريدك الإلكتروني",
   "phone": "رقم الهاتف",
+  "enteryourphone": "أدخل رقم هاتفك",
   "profile": "صفحتي",
   "home": "الصفحه الرئيسة",
   "settings": "إعدادات",
@@ -56,5 +59,15 @@
   "street": "شارع",
   "send": "ارسال",
   "thankuforsend": "شكرا لك على إرسال الطلب",
-  "yourrequestisbeingprocessed": "يتم معالجة طلبك"
+  "yourrequestisbeingprocessed": "يتم معالجة طلبك",
+  "register": "سجل",
+  "bettertogether": "معا أفضل",
+  "enteryourmobilephonetoregisterinhakeema": "أدخل رقم هاتفك المحمول للتسجيل في  تطبيق حكيمة",
+  "continueto": "استمر",
+  "createanaccount": "إنشاء حساب",
+  "resultnotfound": "لم يتم العثور على النتيجة",
+  "whoopsthisinformationisnotavailable": "عفوًا ... هذه المعلومات غير متوفرة",
+  "somethingwentwrong": "هناك خطأ ما",
+  "myreservation": "الحجوزات",
+  "changeLang": "تغيير اللغة"
 }
