--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -43,10 +43,13 @@
   "do_You_have_any_Special_Instructions": "Do You have any Special Instructions?",
   "choosetypeofcareService": "Choose Type Of Care Service",
   "enterspecialinstructionshere": "Enter special instructions here...",
-  "please_submit_the_Following_details": "Please submit the following details",
+  "please_submit_the_Following_details": "Please check the following details",
   "name": "Name",
+  "enteryourname": "Enter Your Name",
   "email": "Email",
+  "enteryouremai": "Enter Your Email",
   "phone": "Phone No",
+  "enteryourphone": "Enter Your Phone Number",
   "profile": "Profile",
   "home": "Home",
   "settings": "Settings",
@@ -56,5 +59,15 @@
   "street": "Street",
   "send": "Send",
   "thankuforsend": "thank you for send request",
-  "yourrequestisbeingprocessed": "Your request is being processed"
+  "yourrequestisbeingprocessed": "Your request is being processed",
+  "register": "Register",
+  "bettertogether": "Better Together",
+  "enteryourmobilephonetoregisterinhakeema": "Enter your mobile phone to register in Hakeema App",
+  "continueto": "Continue",
+  "createanaccount": "Create An Account",
+  "resultnotfound": "Result Not Found ",
+  "whoopsthisinformationisnotavailable": "Whoops ... this information is not available",
+  "somethingwentwrong": "Something went wrong ",
+  "myreservation": "Reservation",
+  "changeLang": "Change Language"
 }
